# GrpcServerZarrBacked

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
NotebooksAndTests/: NotebookIngClientsTests.ipynb  NotebookingSkelAndGraph.ipynb  SkelToGraph.py  SkelToGraphCleaning.py  SkeletonCreation.py
proto/: Server.proto
src/Client/: DataClient.py  __init__.py
src/Server/: MasterServer.py  ServerService.py  ZarrService.py
